// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть корректный задизейбленный компонент 1`] = `
<div
  className="SaleDelivery SaleDelivery_with-cities"
>
  <IconSvg
    className="SaleDelivery__icon"
    id="svgID"
    size="24"
  />
  Доставка в 
  <span
    onClick={[Function]}
  >
    Балашиху
  </span>
</div>
`;

exports[`должен вернуть корректный компонент, если длина массива городов доставки в винительном падеже больше 1 1`] = `
<div
  className="SaleDelivery SaleDelivery_with-cities"
>
  <IconSvg
    className="SaleDelivery__icon"
    id="svgID"
    size="24"
  />
  Доставка в 
  Москву
  , 
  <span
    onClick={[Function]}
  >
    еще города
  </span>
</div>
`;

exports[`должен вернуть корректный компонент, если длина массива городов доставки в винительном падеже равна 0 1`] = `
<div
  className="SaleDelivery"
  onClick={[Function]}
>
  <IconSvg
    className="SaleDelivery__icon"
    id="svgID"
    size="24"
  />
  Добавить города доставки
</div>
`;

exports[`должен вернуть корректный компонент, если длина массива городов доставки в винительном падеже равна 1 1`] = `
<div
  className="SaleDelivery SaleDelivery_with-cities"
>
  <IconSvg
    className="SaleDelivery__icon"
    id="svgID"
    size="24"
  />
  Доставка в 
  <span
    onClick={[Function]}
  >
    Балашиху
  </span>
</div>
`;
